<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/milk1"
    android:orientation="vertical"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="60dp"

        android:layout_marginTop="30dp"

        android:inputType="text|numberDecimal"
        android:text="@string/textview1"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"

        android:inputType="text|numberDecimal"
        android:text="@string/textview2"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="60dp"

        android:layout_marginTop="60dp"
        android:inputType="textPersonName|numberDecimal"
        android:text="@string/textview3"
        android:textColor="#FFFFFF"
        android:layout_marginLeft="10dp"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="30dp"
        android:text="Back"
        android:textColor="#100F0F"
        android:textSize="24sp"
        android:textStyle="bold" />

</LinearLayout>