<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/milk1"

    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/editTextDate"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#FFFFFF"
        android:text="DATE"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:autofillHints=""
        android:ems="10"
        android:focusable="false"

        android:focusableInTouchMode="false"
        android:hint="@string/enter_date"
        android:inputType="date"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignTop="@id/editTextNumber"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:background="#FFFFFF"
        android:text="COW MILK"
        android:textSize="24sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextDate"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_quantity"
        android:inputType="numberSigned|numberDecimal"
        android:text="0.5"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignTop="@id/editTextNumber2"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:background="#FFFFFF"
        android:text="BUFF MILK"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextNumber2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextNumber"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/entr_quantity"
        android:inputType="numberDecimal|numberSigned"
        android:text="1.5"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/add"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_toEndOf="@+id/button"
        android:layout_toRightOf="@+id/button"
        android:text="DLT"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="237dp"
        tools:layout_editor_absoluteY="409dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_toEndOf="@+id/button2"
        android:layout_toRightOf="@+id/button2"
        android:text="@string/view"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="33dp"
        tools:layout_editor_absoluteY="523dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:text="@string/total"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="226dp"
        tools:layout_editor_absoluteY="532dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button4"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="70dp"
        android:text="CLR TBL"
        android:textSize="24sp"
        android:textStyle="normal" />


    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/button5"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"

        android:layout_toEndOf="@id/button5"
        android:layout_toRightOf="@id/button5"
        android:text="UPDT TBL"
        android:textSize="24sp" />


</RelativeLayout>